[CacheStorage] Don't store open caches in Blink

Blink objects were storing cache objects so that they could be returned quickly
on subsequent open calls. This is problematic as there can be many contexts
(different windows, workers, service workers, and dev tools) opening/deleting
caches. If one of them deletes the cache then all of the others need to be
invalidated. Rather than synchronize the various contexts, for now just remove
the stored caches from Blink.

BUG=639034

Review-Url: https://codereview.chromium.org/2270413003
Cr-Commit-Position: refs/heads/master@{#414147}

Former-commit-id: db792ded02006fe0e9b4230c1b904c0560302007